@@ -36,7 +36,7 @@
 static const char *description = 
 	I18N_NOOP("KPPP log viewer");
 
-static const char *version = "v0.0.1";
+static const char *version = "v0.0.2";
 
 static KCmdLineOptions option[] =
 {
